--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 setup.pyc
 pyquant/*pyc
 pyquant/genopheno/*pyc
+pyquant/mixmogam/*pyc
 quantOmics.egg-info
 pyquant/__pycache__
 pyquant/genopheno/__pycache__
